After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 407539 - ATK missing ATK_STATE_HAS_TOOL_TIP which at-spi has
ATK missing ATK_STATE_HAS_TOOL_TIP which at-spi has
Status: RESOLVED FIXED
Product: atk
Classification: Platform
Component: atk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: ATK maintainer(s)
ATK maintainer(s)
Depends on:
Blocks: 638537 738953 738982
 
 
Reported: 2007-02-13 17:32 UTC by bill.haneman
Modified: 2014-10-22 11:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1020 bytes, patch)
2014-10-21 17:54 UTC, Joanmarie Diggs (IRC: joanie)
committed Details | Review

Description bill.haneman 2007-02-13 17:32:12 UTC
self-explanatory - at-spi has STATE_HAS_TOOLTIP but ATK doesn't have equivalent state.
Comment 1 André Klapper 2011-06-23 22:06:49 UTC
[Mass-reassigning open atk bug reports for better trackability as requested in https://bugzilla.gnome.org/show_bug.cgi?id=653179 .
PLEASE NOTE:
If you have watched the previous assignee of this bug report as a workaround for actually getting notified of changes in atk bugs, you yourself will now have to add atk-maint@gnome.bugs to your watchlist at the bottom of https://bugzilla.gnome.org/userprefs.cgi?tab=email to keep watching atk bug reports in GNOME Bugzilla.
Sorry for the noise: Feel free to filter for this comment in order to mass-delete the triggered bugmail.]
Comment 2 Joanmarie Diggs (IRC: joanie) 2014-10-21 17:54:13 UTC
Created attachment 289059 [details] [review]
Proposed patch

The AT-SPI2 state is ATSPI_STATE_HAS_TOOLTIP (with 'tooltip' as one word) [1] so I followed that for consistency's sake.

[1] https://developer.gnome.org/libatspi/2.14/libatspi-atspi-constants.html#AtspiStateType
Comment 3 Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-10-22 11:00:20 UTC
Review of attachment 289059 [details] [review]:

Looks good. Just make a small change and commit it in any case.

::: atk/atkstate.h
@@ +125,3 @@
  * that activation renders conditional content.  Note that ordinary
  * tooltips are not considered popups in this context. @Since: ATK-2.12
+ *@ATK_STATE_HAS_TOOLTIP: Indicates this object has a tooltip. @Since: ATK-2.15.1

To make it easier, we put the Since with the stable release that will include this change. So as we mentioned on IRC, please use 2-16 there.
Comment 4 Joanmarie Diggs (IRC: joanie) 2014-10-22 11:23:37 UTC
Comment on attachment 289059 [details] [review]
Proposed patch

Committed with the change specified. Thanks for the review!

https://git.gnome.org/browse/atk/commit/?id=c56ca79