Add ATK_STATE_HAS_TOOLTIP

https://bugzilla.gnome.org/show_bug.cgi?id=407539